--- a/books/templates/books/books.html
+++ b/books/templates/books/books.html
@@ -2,139 +2,162 @@
 {% load static %}
 
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
     </div>
+</div>
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col text-center mt-3">
-                {% if current_categories %}
-                    <hr>
-                    <h1>Books in {% for category in current_categories %}{{ category.friendly_name }}{% if not forloop.last %}, {% endif %}{% endfor %}</h1>
-                {% else %}
-                    <hr>
-                    <h1>All Books</h1>
-                {% endif %}
+<div class="overlay"></div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col text-center mt-3">
+            {% if current_categories %}
+            <hr>
+            <h1>Books in {% for category in current_categories %}{{ category.friendly_name }}{% if not forloop.last %}, {% endif %}{% endfor %}</h1>
+            {% else %}
+            <hr>
+            <h1>All Books</h1>
+            {% endif %}
+        </div>
+    </div>
+    <div class="row">
+        <div class="product-container col-12">
+            <div class="row mt-1 mb-2"></div>
+            <div class="col-6 my-auto order-md-last justify-content-md-end">
+                <div class="sort-select-wrapper w-50">
+                    <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting %}info{% else %}black{% endif %}">
+                        <option value="reset" {% if not current_sorting %}selected{% endif %}>Sort by...</option>
+                        <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
+                        <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high to low)</option>
+                        <option value="rating_asc" {% if current_sorting == 'rating_asc' %}selected{% endif %}>Rating (low to high)</option>
+                        <option value="rating_desc" {% if current_sorting == 'rating_desc' %}selected{% endif %}>Rating (high to low)</option>
+                        <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name (A-Z)</option>
+                        <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name (Z-A)</option>
+                        <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>Category (A-Z)</option>
+                        <option value="category_desc" {% if current_sorting == 'category_desc' %}selected{% endif %}>Category (Z-A)</option>
+                    </select>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 order-md-first">
+                <p class="text-muted mt-3 text-center text-md-left">
+                    {% if search_term or current_categories or current_sorting %}
+                    <span class="small"><a href="{% url 'books' %}">Books Home</a> | </span>
+                    {% endif %}
+                    {{ books|length }} Books{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
+                </p>
             </div>
         </div>
         <div class="row">
-            <div class="product-container col-12">
-                <div class="row mt-1 mb-2"></div>
-                <div class="col-6 my-auto order-md-last justify-content-md-end">
-                    <div class="sort-select-wrapper w-50">
-                        <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting %}info{% else %}black{% endif %}">
-                            <option value="reset" {% if not current_sorting %}selected{% endif %}>Sort by...</option>
-                            <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
-                            <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high to low)</option>
-                            <option value="rating_asc" {% if current_sorting == 'rating_asc' %}selected{% endif %}>Rating (low to high)</option>
-                            <option value="rating_desc" {% if current_sorting == 'rating_desc' %}selected{% endif %}>Rating (high to low)</option>
-                            <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name (A-Z)</option>
-                            <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name (Z-A)</option>
-                            <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>Category (A-Z)</option>
-                            <option value="category_desc" {% if current_sorting == 'category_desc' %}selected{% endif %}>Category (Z-A)</option>
-                        </select>
+            {% for book in books %}
+            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                <div class="card h-100 border-0">
+                    {% if book.image %}
+                    <a href="{% url 'book_detail' book.id %}">
+                        <img class="card-img-top img-fluid" src="{{ book.image.url }}" alt="{{ book.title }}">
+                    </a>
+                    {% else %}
+                    <a href="{% url 'book_detail' book.id %}">
+                        <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ book.title }}">
+                    </a>
+                    {% endif %}
+                    <div class="card-body pb-0">
+                        <p class="mb-0">{{ book.title }}</p>
+                        <p class="mb-0"><strong>Format:</strong> {{ book.get_format_display }}</p>
                     </div>
-                </div>
-                <div class="col-12 col-md-6 order-md-first">
-                    <p class="text-muted mt-3 text-center text-md-left">
-                        {% if search_term or current_categories or current_sorting %}
-                            <span class="small"><a href="{% url 'books' %}">Books Home</a> | </span>
-                        {% endif %}
-                        {{ books|length }} Books{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
-                    </p>
-                </div>
-            </div>
-            <div class="row">
-                {% for book in books %}
-                    <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                        <div class="card h-100 border-0">
-                            {% if book.image %}
-                                <a href="{% url 'book_detail' book.id %}">
-                                    <img class="card-img-top img-fluid" src="{{ book.image.url }}" alt="{{ book.title }}">
-                                </a>
-                            {% else %}
-                                <a href="{% url 'book_detail' book.id %}">
-                                    <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ book.title }}">
-                                </a>
-                            {% endif %}
-                            <div class="card-body pb-0">
-                                <p class="mb-0">{{ book.title }}</p>
-                                <p class="mb-0"><strong>Format:</strong> {{ book.get_format_display }}</p>
-                            </div>
-                            <div class="card-footer bg-white pt-0 border-0 text-left">
-                                <div class="row">
-                                    <div class="col">
-                                        <p class="lead mb-0 text-left font-weight-bold">£{{ book.price }}</p>
-                                        {% if book.categories.exists %}
-                                            <p class="small mt-1 mb-0">
-                                                {% for category in book.categories.all %}
-                                                    <a class="text-muted" href="{% url 'books' %}?category={{ category.name }}">
-                                                        <i class="fas fa-tag mr-1"></i>{{ category.friendly_name }}
-                                                    </a>
-                                                {% if not forloop.last %}, {% endif %}
-                                            {% endfor %}
-                                            </p>
-                                        {% endif %}
-                                        {% if book.rating %}
-                                            <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ book.rating }} / 5</small>
-                                        {% else %}
-                                            <small class="text-muted">No Rating</small>
-                                        {% endif %}
-                                        {% if request.user.is_superuser %}
-                                            <small class="ml-3">
-                                                <a href="{% url 'edit_book' book.id %}">Edit</a> | 
-                                                <a class="text-danger" href="{% url 'delete_book' book.id %}">Delete</a>
-                                            </small>
-                                        {% endif %}
-                                    </div>
-                                </div>
+                    <div class="card-footer bg-white pt-0 border-0 text-left">
+                        <div class="row">
+                            <div class="col">
+                                <p class="lead mb-0 text-left font-weight-bold">£{{ book.price }}</p>
+                                {% if book.categories.exists %}
+                                <p class="small mt-1 mb-0">
+                                    {% for category in book.categories.all %}
+                                    <a class="text-muted" href="{% url 'books' %}?category={{ category.name }}">
+                                        <i class="fas fa-tag mr-1"></i>{{ category.friendly_name }}
+                                    </a>
+                                    {% if not forloop.last %}, {% endif %}
+                                    {% endfor %}
+                                </p>
+                                {% endif %}
+                                {% if book.rating %}
+                                <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ book.rating }} / 5</small>
+                                {% else %}
+                                <small class="text-muted">No Rating</small>
+                                {% endif %}
+                                {% if request.user.is_superuser %}
+                                <small class="ml-3">
+                                    <a href="{% url 'edit_book' book.id %}">Edit</a> |
+                                    <a class="text-danger" href="#" data-toggle="modal" data-target="#confirmDeleteModal_{{ book.id }}">Delete</a>
+                                </small>
+                                {% endif %}
                             </div>
                         </div>
                     </div>
-                    {% if forloop.counter|divisibleby:1 %}
-                        <div class="col-12 d-sm-none mb-5">
-                            <hr>
-                        </div>
-                    {% endif %}                        
-                    {% if forloop.counter|divisibleby:2 %}
-                        <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
-                            <hr>
-                        </div>
-                    {% endif %}
-                    {% if forloop.counter|divisibleby:3 %}
-                        <div class="col-12 d-none d-lg-block d-xl-none mb-5">
-                            <hr>
-                        </div>
-                    {% endif %}
-                    {% if forloop.counter|divisibleby:4 %}
-                        <div class="col-12 d-none d-xl-block mb-5">
-                            <hr>
-                        </div>
-                    {% endif %}
-                {% endfor %}
+                </div>
             </div>
+
+            <!-- Modal -->
+            <div class="modal fade" id="confirmDeleteModal_{{ book.id }}" tabindex="-1" role="dialog" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="confirmDeleteModalLabel">Confirm Deletion</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            Are you sure you want to delete "{{ book.title }}"?
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                            <a href="{% url 'delete_book' book.id %}" class="btn btn-danger">Delete</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- End Modal -->
+
+            {% if forloop.counter|divisibleby:1 %}
+            <div class="col-12 d-sm-none mb-5">
+                <hr>
+            </div>
+            {% endif %}
+            {% if forloop.counter|divisibleby:2 %}
+            <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
+                <hr>
+            </div>
+            {% endif %}
+            {% if forloop.counter|divisibleby:3 %}
+            <div class="col-12 d-none d-lg-block d-xl-none mb-5">
+                <hr>
+            </div>
+            {% endif %}
+            {% if forloop.counter|divisibleby:4 %}
+            <div class="col-12 d-none d-xl-block mb-5">
+                <hr>
+            </div>
+            {% endif %}
+            {% endfor %}
         </div>
     </div>
-    <div class="btt-button shadow-sm rounded-0 border border-black">
-        <a class="btt-link d-flex h-100">
-            <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
-        </a>	
-    </div>
+</div>
+<div class="btt-button shadow-sm rounded-0 border border-black">
+    <a class="btt-link d-flex h-100">
+        <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+    </a>
+</div>
 {% endblock %}
 
 {% block postloadjs %}
-    {{ block.super }}
-    <script type="text/javascript">
-		$('.btt-link').click(function(e) {
-			window.scrollTo(0,0)
-		})
-	</script>
+{{ block.super }}
+<script type="text/javascript">
+    $('.btt-link').click(function(e) {
+        window.scrollTo(0,0)
+    })
+</script>
 
 <script type="text/javascript">
     $('#sort-selector').change(function() {
