--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -28,8 +28,8 @@
                 Special Offers
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
-                <a href="" class="dropdown-item">New Arrivals</a>
-                <a href="" class="dropdown-item">Clearance</a>
+                <a href="{% url 'new_arrivals' %}" class="dropdown-item">New Arrivals</a>
+                <a href="{% url 'clearance_books' %}" class="dropdown-item">Clearance</a>
             </div>
         </li>
     </ul>
