--- a/staticfiles/css/base.css
+++ b/staticfiles/css/base.css
@@ -83,6 +83,10 @@ body {
     margin-top: 50%;
 }
 
+hr {
+    margin-bottom: 3rem;
+}
+
 .overlay {
 	height: 100%;
 	width: 100%;
@@ -321,4 +325,58 @@ input[name='q']::placeholder {
     body {
         height: calc(100vh - 116px);
     }
+    
+    .display-4.logo-font.text-black {
+        font-size: 2rem;
+    }
+
+    .nav-link {
+        padding: 0.15rem;
+    }
+
+    .nav-link i.fa-lg {
+        font-size: 1rem;
+    }
+
+    .navbar-toggler {
+        padding: .6rem .6rem;
+        font-size: 1rem;
+    }
+
+    #delivery-banner h4 {
+        font-size: .9rem;
+    }
+
+
+    .btn.btn-outline-black.rounded-0.btn-lg,
+    .btn.btn-black.rounded-0.btn-lg {
+        padding: .375rem .375rem;
+        font-size: .75rem;
+    }
+
+    .increment-qty, .decrement-qty {
+        padding: .25rem .5rem !important;
+    }
+}
+
+div.img-thumbnail.wishlist-img {
+    border: none;
+    max-width: 70%;
+    height: 70%;
+}
+
+tr.border-bottom {
+    text-align: left;
+}
+
+a.btn.btn-primary.mt-3 {
+    margin-left: 4%;
+}
+
+input#id_title {
+    margin-left: 5%;
+}
+
+input#id_rating {
+    margin-left: 2%;
 }
