--- a/templates/base.html
+++ b/templates/base.html
@@ -40,8 +40,9 @@
     <header class="container-fluid fixed-top">
         <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
+                {% load static %}
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                    <img src="/media/logo.png" alt="CookBookNook Logo" class="brand-logo logo-fork">
+                    <img src="{% static '/media/logo.png' %}" alt="CookBookNook Logo" class="brand-logo logo-fork">
                 </a>
             </div>
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
