--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -82,7 +82,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-12">
+                                <div class="col-12 d-flex align-items-center justify-content-center">
                                     <a href="{% url 'books' %}" class="btn btn-outline-black rounded-0 mt-5">
                                         <span class="icon">
                                             <i class="fas fa-chevron-left"></i>
@@ -101,7 +101,7 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container container-fluid border">
         <div class="row mt-5">
             <div class="col-12 text-center">
                 <h3>Reviews</h3>
