--- a/books/templates/books/add_category.html
+++ b/books/templates/books/add_category.html
@@ -27,7 +27,7 @@
                 {% csrf_token %}
                 {{ form|crispy }}
                 <div class="text-right">
-                    <a href="{% url 'books' %}" class="btn logo-font btn-style rounded">Cancel</a>
+                    <a href="{% url 'book_management' %}" class="btn logo-font btn-style rounded">Cancel</a>
                     <button class="btn logo-font btn-style rounded" type="submit">Add Category</button>
                 </div>
             </form>
