--- a/books/templates/books/edit_book.html
+++ b/books/templates/books/edit_book.html
@@ -23,15 +23,34 @@
 
         <div class="row">
             <div class="col-12 col-md-6">
+                {% if form.errors %}
+                    <div class="alert alert-danger">
+                        <strong>Please correct the errors below:</strong>
+                        <ul>
+                            {% for field in form %}
+                                {% for error in field.errors %}
+                                    <li>{{ field.label }}: {{ error }}</li>
+                                {% endfor %}
+                            {% endfor %}
+                            {% for error in form.non_field_errors %}
+                                <li>{{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                {% endif %}
+
                 <form method="POST" action="{% url 'edit_book' book.id %}" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
+                    
+                    <!-- Display each form field -->
                     {% for field in form %}
                         {% if field.name != 'image' %}
-                            {{ field | as_crispy_field }}
+                            {{ field|as_crispy_field }}
                         {% else %}
                             {{ field }}
                         {% endif %}
                     {% endfor %}
+                    
                     <div class="text-right">
                         <a class="btn btn-outline-black rounded-0" href="{% url 'books' %}">Cancel</a>
                         <button class="btn btn-black rounded-0" type="submit">Update Book</button>
